[package]
name = "plants_vs_zombies"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14" }
bevy_mod_picking = { version = "0.20" }
iyes_perf_ui = { version = "0.3", optional = true }
bevy_blendy_cameras = { version = "0.4", optional = true }
bevy-inspector-egui = { version = "0.25", optional = true }

[features]
default = ["dev"]
dev = ["bevy/dynamic_linking", "dep:iyes_perf_ui", "dep:bevy_blendy_cameras", "dep:bevy-inspector-egui"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
debug = 0
strip = "debuginfo"
